# WARS-8-API

./: Cargo.toml
src/: lib.rs
wars-8-apps/wars-8-dvd/: Cargo.toml
wars-8-apps/wars-8-dvd/src/: lib.rs
wars-8-apps/wars-8-pride/: Cargo.toml
wars-8-apps/wars-8-pride/src/: lib.rs
wars-8-apps/wars-8-template/: Cargo.toml
wars-8-apps/wars-8-template/src/: lib.rs
wars-8-apps/wars-8-terminal/: Cargo.toml
wars-8-apps/wars-8-terminal/src/: lib.rs
