[package]
name = "wars_8_terminal"
version = "0.1.0"
authors = ["EliseZeroTwo <elise@headpat.services>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
wars_8_api = { git = "https://github.com/EliseZeroTwo/WARS-8-API", branch = "main" }